--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=Rentree
 
-# MySQL ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/RenTree?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1522314g!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA ??
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update  # (create, update, none)
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
