--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Rentree
 
-spring.datasource.url=jdbc:mysql://localhost:3306/capstone?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/RenTree?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=1522314g!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
