--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=Rentree
 
-spring.datasource.url=jdbc:mysql://localhost:3306/RenTree?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://rentree-db.cfsoga8okkmg.ap-southeast-2.rds.amazonaws.com:3306/rentree?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=2171520!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.web.resources.static-locations=classpath:/static/,file:C:/rentree_upload/
-spring.mvc.static-path-pattern=/images/**
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
