--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://rentree-db.cfsoga8okkmg.ap-southeast-2.rds.am
 spring.datasource.username=admin
 spring.datasource.password=2171520!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
