사물함 이용 가이드 화면

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   assets:
     - assets/
     - assets/Profile/
+    - assets/Guide/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
