아이콘 변경(향후 수정 필요) 채팅 버그 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.1.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
@@ -54,12 +55,21 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+
+flutter_launcher_icons:
+  image_path: "assets/Icon/appLogo.png"
+
+  android: true
+  ios: true
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/Icon/appLogo.png"
 # The following section is specific to Flutter packages.
 flutter:
   assets:
     - assets/
     - assets/Profile/
     - assets/Guide/
+    - assets/Icon/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
