--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,16 +65,28 @@ flutter_launcher_icons:
   adaptive_icon_foreground: "assets/Icon/appLogo.png"
 # The following section is specific to Flutter packages.
 flutter:
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/PretendardVariable.ttf
+    - family: NanumSquare
+      fonts:
+        - asset: assets/fonts/NanumSquareNeo-dEb.ttf
+
+
   assets:
     - assets/
     - assets/Profile/
     - assets/Guide/
     - assets/Icon/
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
